--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -14,7 +14,7 @@ title: nafen
 	
 	<div class="content__video video">
 			<div class="video__video">
-				<video src="../video/nafen.mp4" muted></video>
+				<video src="video/nafen.mp4" muted></video>
 			</div>
 			<div class="video__block-overlay-left"></div>
 			<div class="video__block-overlay-right"></div>
