--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,6 +1,11 @@
 $font-stack: Verdana, sans-serif
+
+body
+	background: #000
+
 .h1
 	text-align: center
 	color: #fff
-	font-size: 150px
+	font-size: 130px
 	font-family: $font-stack
+	
