--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -8,8 +8,8 @@ $font-stack: Verdana, sans-serif
 	top: 0
 	overflow: hidden
 	&__center
+		z-index: 100
 		+vcenter
-		z-index: 100 
 	&__video
 		position: absolute
 		top: 0
@@ -23,10 +23,21 @@ $font-stack: Verdana, sans-serif
 		font-size: 20px
 		color: #fff
 		margin-bottom: 30px
-		font-family: $font-stack 
-	&__play-icon
-		border-radius: 50%
-		cursor: pointer
+		font-family: $font-stack
+	&__icon
+		position: relative
+		.icon
+			cursor: pointer
+		&-click
+			+vcenter
+			width: 60px
+			height: 60px
+			background: #fff
+			margin-left: -30px
+			margin-top: -30px
+			opacity: 0
+			border-radius: 50%
+			transform: scale(0.1)
 
 .video
 	&__video
@@ -36,11 +47,11 @@ $font-stack: Verdana, sans-serif
 		left: 0
 		right: 0
 		video
-			position: absolute
 			min-width: 100%
 			min-height: 100%
 			width: auto
 			height: auto
+			+vcenter
 	&__block-overlay-left
 		position: absolute
 		top: 0
@@ -68,15 +79,82 @@ $font-stack: Verdana, sans-serif
 		right: 40px
 		top: 40px
 		z-index: 100
+	&__pause-play
+		display: none
+		cursor: pointer
+		z-index: 101
+		color: white
+		width: 180px
+		height: 180px
+		line-height: 150
+		background: rgba(0, 0, 0, 0.4)
+		border-radius: 50%
+		+vcenter
+	&__controls
+		opacity: 0
+		position: absolute
+		left: 40px
+		right: 40px
+		bottom: 40px
+		height: 30px
+	&__currentTime
+		position: absolute
+		z-index: 1001
+		color: #fff
+		bottom: 10px
+		font-size: 20px
+		font-weight: 700
+		display: none
+	&__pause
+		position: absolute
+		z-index: 1001
+		color: #fff
+		bottom: 10px
+		left: 200px
+		top: 0
+		font-size: 15px
+		font-weight: 400
+		display: none
+	&__duration
+		position: absolute
+		z-index: 1001
+		color: #fff
+		bottom: 10px
+		right: 0
+		top: 0
+		font-size: 12px
+		font-weight: 700
+	&__progressBar
+		position: absolute
+		z-index: 1001
+		width: 100%
+		height: 2px
+		background: rgba(#fff,0.4)
+		bottom: 0
+		span
+			display: block
+			background: #fff
+			position: relative
+			z-index: 1002
+			height: 2px
 
 .cross
 	width: 30px
 	height: 30px
-	&__item
+	&__item-top
 		position: absolute
+		top: 0
 		width: 30px
 		height: 3px
-		margin-bottom: 5px
+		margin-bottom: 10px
+		background: #fff
+		cursor: pointer
+	&__item-bottom
+		position: absolute
+		top: 10px 
+		width: 30px
+		height: 3px
+		margin-bottom: 10px
 		background: #fff
 		cursor: pointer
 
@@ -84,6 +162,9 @@ $font-stack: Verdana, sans-serif
 	fill: #fff
 	width: 60px
 	height: 60px
-	&:hover
-		fill: grey
 
+.icon-pause-play
+	width: 60px
+	height: 60px
+	fill: #fff
+	+vcenter
